<resources>
    <string name="app_name">Rushly</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAny Day</string>
    <string name="quality">It is now very easy to reach the best quality among the products on the internet!</string>
    <string name="start">Start</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="lets_login">Let\'s Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="log_in">Log in</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="lets_register">Let\'s Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_summary">We will send you the password reset link to your email address.</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="email_address">Email address</string>
    <string name="verify_email">Verify Email</string>
    <string name="verify_email_summary">A verification email has been sent to the provided email address. Please click on the link sent to that email address to complete the registration process.</string>
    <string name="resend">Resend</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search_now">Search now</string>
    <string name="scan">Scan</string>
    <string name="voice_input">Voice input</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="view_product">View product</string>
    <string name="best_products">Best products</string>
    <string name="best_deals">Best deals</string>
    <string name="product_general_information">Product General Information:</string>
    <string name="product_details">Product Details:</string>
    <string name="colors">Colors</string>
    <string name="none">None</string>
    <string name="images">Images</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="product_description_summary">Product description (optional)</string>
    <string name="price">Price</string>
    <string name="offer_percentage_summary">Offer Percentage (Optional)</string>
    <string name="sizes_summary">Sizes (optional) | use comma to separate</string>
    <string name="add_product">Add Product</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="total">Total</string>
    <string name="check_out">Check Out</string>
    <string name="cart_empty">Your shopping cart is empty</string>
    <string name="my_cart">My Cart</string>
    <string name="label">Label (e.g: Home / Office)</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="no_virtual_payment">Rushly does not support virtual payments yet. You can pay when you receive your order.</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="place_order">Place Order</string>
    <string name="billing">Billing</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_new_product">Add New Product</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="my_orders">My Orders</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="products">Products</string>
    <string name="billing_address">Billing Address</string>
    <string name="no_search_results_found">No search results found</string>
    <string name="special_product">Special Product</string>
    <string name="all_orders">All Orders</string>
</resources>