<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.onboarding.RegisterFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/blurry_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvAppName"
        style="@style/h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="6dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_rushly"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineTopLogo" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_register"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineTopTitle" />

    <LinearLayout
        android:id="@+id/tvAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <TextView
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account" />

        <TextView
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvLogIn"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/g_blue" />

    </LinearLayout>

    <EditText
        android:id="@+id/edFirstNameRegister"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginTop="50dp"
        android:autofillHints="name"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintTop_toBottomOf="@id/tvAlreadyHaveAccount" />

    <EditText
        android:id="@+id/edLastNameRegister"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginTop="15dp"
        android:autofillHints="name"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintTop_toBottomOf="@id/edFirstNameRegister" />

    <EditText
        android:id="@+id/edEmailRegister"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginTop="15dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintTop_toBottomOf="@id/edLastNameRegister" />

    <EditText
        android:id="@+id/edPasswordRegister"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginTop="15dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintTop_toBottomOf="@id/edEmailRegister" />

    <ImageView
        android:id="@+id/facebookRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:src="@drawable/facebook_login"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/facebook"
        android:textColor="#4267B2"
        app:layout_constraintBottom_toBottomOf="@id/facebookRegister"
        app:layout_constraintStart_toStartOf="@id/facebookRegister"
        app:layout_constraintTop_toTopOf="@id/facebookRegister" />

    <ImageView
        android:id="@+id/googleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:src="@drawable/google_login"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/google"
        android:textColor="#DB4437"
        app:layout_constraintBottom_toBottomOf="@id/googleRegister"
        app:layout_constraintStart_toStartOf="@id/googleRegister"
        app:layout_constraintTop_toTopOf="@id/googleRegister" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/buttonRegister"
        style="@style/blueButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/medium_button_height"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintTop_toBottomOf="@id/edPasswordRegister"
        app:spinning_bar_color="@color/white" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>