<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.onboarding.AccountOptionsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blurry_background"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="6dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_rushly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guidelineTopLogo" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rightAddress"
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
            app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
            app:layout_constraintTop_toBottomOf="@id/guidelineTopTitle" />

        <TextView
            android:id="@+id/tvDesc"
            style="@style/h2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/quality"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
            app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvDesc"
            app:layout_constraintStart_toStartOf="@id/tvDesc"
            app:layout_constraintTop_toBottomOf="@id/tvDesc">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRegister"
                style="@style/blueButtonStyle"
                android:layout_width="@dimen/medium_button_width"
                android:layout_height="@dimen/medium_button_height"
                android:text="@string/register" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                style="@style/whiteButtonStyle"
                android:layout_width="@dimen/medium_button_width"
                android:layout_height="@dimen/medium_button_height"
                android:layout_marginTop="10dp"
                android:text="@string/login" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTopLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTopTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEllipseLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEllipseRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>